fixed mobile title spacing

--- a/src/components/prompt/prompt.scss
+++ b/src/components/prompt/prompt.scss
@@ -99,7 +99,7 @@
 	&Group {
 		margin-top: 20px;
 		@include mobile-all-portrait {
-			margin-top: 40px;
+			margin-top: 10px;
 		}
 	}
 }
